added default jvm config
Signed-off-by: munishchouhan <hrma017@gmail.com>